# AI-and-Agents

Course-Architect/: .env.example  README.md  config.py  course.md  main.py  output.py  pyproject.toml
Course-Architect/agents/: __init__.py  orchestrator.py
Course-Architect/models/: __init__.py
Course-Architect/prompts/: __init__.py  content_builder.py  researcher.py
Course-Architect/tools/: search.py
Course-Designing-Agent/: .gitignore  README.md  config.py  course.json  observability.py  pyproject.toml
Course-Designing-Agent/agents/: content_builder.py  judge.py  researcher.py
Course-Designing-Agent/models/: schemas.py
Course-Designing-Agent/prompts/: judge.py  orchestrator.py
Course-Designing-Agent/tools/: __init__.py
