[project]
name = "course-creation-ai-agent"
version = "0.1.0"
description = "Multi-agent AI system that creates structured course outlines, built with AWS Strands Agents and Amazon Bedrock."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.45.0",
    "boto3>=1.38.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.43.0",
]

[project.optional-dependencies]
# Install with `uv sync --extra anthropic` to call Claude via the Anthropic API
# instead of Amazon Bedrock.
anthropic = [
    "anthropic>=0.40.0",
]

[tool.uv]
package = false
